# 2D_projects

./: 2D_projects.sln  CMakeLists.txt
ENGINE_CORE/: CMakeLists.txt  ENGINE_CORE.vcxproj  ENGINE_CORE.vcxproj.filters
ENGINE_CORE/Core/ECS/: Entity.cpp  Entity.hpp  Entity.inl  Registry.cpp  Registry.hpp
ENGINE_CORE/Core/ECS/Components/: Identification.hpp  SpriteComponent.hpp  TransformConponent.hpp
ENGINE_CORE/Core/Resources/: AssetManager.cpp  AssetManager.hpp
ENGINE_CORE/include/Core/CoreUtilities/: CoreEngineData.hpp  CoreUtilities.hpp  FollowCamera.hpp
ENGINE_CORE/include/Core/ECS/: Entity.hpp  Entity.inl  MainRegistry.hpp  MetaUtilities.hpp  Registry.hpp  Registry.inl
ENGINE_CORE/include/Core/Resources/: AssetManager.hpp  default_fonts.hpp
ENGINE_CORE/include/Core/Scripting/: ContactListenerBinds.hpp  GlmLuaBindings.hpp  InputManager.hpp  RendererBindings.hpp  SoundBindings.hpp  UserDataBindings.hpp  UserDataBindings.inl
ENGINE_CORE/include/Core/States/: State.hpp  StateMachine.hpp  StateStack.hpp
ENGINE_CORE/include/Core/Systems/: AnimationSystem.hpp  PhysicsSystem.hpp  RenderShapeSystem.hpp  RenderSystem.hpp  RenderUISystem.hpp  ScriptingSystem.hpp
ENGINE_CORE/src/CoreUtilities/: CoreEngineData.cpp  CoreUtilities.cpp  FollowCamera.cpp
ENGINE_CORE/src/ECS/: Entity.cpp  MainRegistry.cpp  MetaUtilities.cpp  Registry.cpp
ENGINE_CORE/src/ECS/Components/: AnimationComponent.cpp  BoxColliderComponent.cpp  CircleColliderComponent.cpp  PhysicsComponent.cpp  RigidBodyComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  TransformComponent.cpp
ENGINE_CORE/src/Resources/: AssetManager.cpp
ENGINE_CORE/src/Scripting/: ContactListenerBinds.cpp  GlmLuaBindings.cpp  InputManager.cpp  RendererBindings.cpp  SoundBindings.cpp  UserDataBindings.cpp
ENGINE_CORE/src/States/: State.cpp  StateMachine.cpp  StateStack.cpp
ENGINE_CORE/src/Systems/: AnimationSystem.cpp  PhysicsSystem.cpp  RenderShapeSystem.cpp  RenderSystem.cpp  RenderUISystem.cpp  ScriptingSystem.cpp
ENGINE_EDITOR/: CMakeLists.txt  ENGINE_EDITOR.vcxproj  ENGINE_EDITOR.vcxproj.filters
ENGINE_EDITOR/assets/ASTEROIDS/scripts/: Asteroid.lua  Ship.lua  assetDefs.lua  collision_system.lua  entityDefs.lua  main.lua  script_list.lua  utilities.lua
ENGINE_EDITOR/assets/scripts/: follow_cam.lua  main.lua  oldmain.lua  rain_generator.lua  scene_rain.lua  script_list.lua  test_ball.lua  utilities.lua
ENGINE_EDITOR/assets/scripts/TestProject/: assetDefs.lua  playerDefs.lua  projectiles.lua  testmap1.lua  testmap2.lua
ENGINE_EDITOR/assets/scripts/asteroids/: Hud.lua  Projectile.lua  Ship.lua  assetDefs.lua  collision_system.lua  entityDefs.lua  game_data.lua  utilities.lua
ENGINE_EDITOR/assets/scripts/character/: character.lua  move_state.lua
ENGINE_EDITOR/assets/scripts/events/: collision_event.lua  event_manager.lua
ENGINE_EDITOR/assets/scripts/game_states/: game_state.lua  title_state.lua
ENGINE_EDITOR/assets/scripts/systems/: trigger_system.lua
ENGINE_EDITOR/assets/shaders/: basicShader.frag  basicShader.vert  circleShader.frag  circleShader.vert  colorShader.frag  colorShader.vert
ENGINE_EDITOR/assets/tiled_maps/: testmap1-project.tiled-session  testmap1.tmx  testmap2.tiled-session  testmap2.tmx
ENGINE_EDITOR/src/: Application.cpp  Application.hpp  main.cpp
ENGINE_EDITOR/src/Editor/displays/: AssetDisplay.cpp  AssetDisplay.hpp  IDisplay.hpp  LogDisplay.cpp  LogDisplay.hpp  SceneDisplay.cpp  SceneDisplay.hpp  TilemapDisplay.cpp  TilemapDisplay.hpp  TilesetDisplay.cpp  TilesetDisplay.hpp
ENGINE_EDITOR/src/Editor/scenes/: SceneManager.cpp  SceneManager.hpp  SceneObject.cpp  SceneObject.hpp
ENGINE_EDITOR/src/Editor/systems/: GridSystem.cpp  GridSystem.hpp
ENGINE_EDITOR/src/Editor/utilities/: EditorFramebuffer.hpp  EditorUtilities.hpp  editor_textures.hpp
ENGINE_LOGGER/: CMakeLists.txt  ENGINE_LOGGER.vcxproj  ENGINE_LOGGER.vcxproj.filters
ENGINE_LOGGER/Logger/: Logger.Inl  Logger.cpp  Logger.hpp
ENGINE_LOGGER/include/Logger/: Logger.hpp  Logger.inl
ENGINE_LOGGER/src/: Logger.cpp
ENGINE_PHYSICS/: CMakeLists.txt
ENGINE_PHYSICS/include/Physics/: Box2DWrappers.hpp  ContactListener.hpp  UserData.hpp
ENGINE_PHYSICS/src/: Box2DWrappers.cpp  ContactListener.cpp  UserData.cpp
ENGINE_RENDERING/: CMakeLists.txt  ENGINE_RENDERING.vcxproj  ENGINE_RENDERING.vcxproj.filters
ENGINE_RENDERING/Rendering/Core/: Camera2D.cpp  Camera2D.hpp
ENGINE_RENDERING/Rendering/Essentials/: Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  Vertex.hpp
ENGINE_RENDERING/include/Rendering/Buffers/: FrameBuffer.hpp
ENGINE_RENDERING/include/Rendering/Core/: BatchRenderer.hpp  Batcher.hpp  Camera2D.hpp  CircleBatchRenderer.hpp  LineBatchRenderer.hpp  RectBatchRenderer.hpp  Renderer.hpp  TextBatchRenderer.hpp
ENGINE_RENDERING/include/Rendering/Essentials/: BatchTypes.hpp  Font.hpp  FontLoader.hpp  Primitives.hpp  Shader.hpp  ShaderLoader.hpp  Texture.hpp  TextureLoader.hpp  Vertex.hpp
ENGINE_RENDERING/src/: BatchRenderer.cpp  Camera2D.cpp  CircleBatchRenderer.cpp  Font.cpp  FontLoader.cpp  FrameBuffer.cpp  LineBatchRenderer.cpp  RectBatchRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderLoader.cpp  TextBatchRenderer.cpp  Texture.cpp  TextureLoader.cpp
ENGINE_SOUNDS/: CMakeLists.txt
ENGINE_SOUNDS/include/Sounds/Essentials/: Music.hpp  SoundFX.hpp  (+1 more)
ENGINE_SOUNDS/src/: Music.cpp  MusicPlayer.cpp  SoundFX.cpp  SoundFxPlayer.cpp
ENGINE_UTILITIES/: CMakeLists.txt  ENGINE_UTILITIES.vcxproj  ENGINE_UTILITIES.vcxproj.filters
ENGINE_UTILITIES/EngineUtilities/: SDL_Wrappers.cpp  SDL_Wrappers.hpp
ENGINE_UTILITIES/include/: SDL_Wrappers.hpp
ENGINE_UTILITIES/include/EngineUtils/: EngineUtilities.hpp  RandomGenerator.hpp  SDL_Wrappers.hpp  Timer.hpp
ENGINE_UTILITIES/src/: RandomGenerator.cpp  SDL_Wrappers.cpp  Timer.cpp
ENGINE_WINDOW/: CMakeLists.txt  ENGINE_WINDOW.vcxproj  ENGINE_WINDOW.vcxproj.filters
ENGINE_WINDOW/Windowing/Window/: Window.cpp  Window.hpp
ENGINE_WINDOW/src/: Button.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
(+25 files in other folders)
